--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -36,7 +36,7 @@ h6 {
     padding-bottom: 10px;
     text-align: center;
     color: #FFFFFF ;
-    background: url(../img/instantCam0.jpg) no-repeat center center;
+    background: url(/img/instantCam0.jpg) no-repeat center center;
     background-size: cover;
 }
 
