--- a/css/signin.css
+++ b/css/signin.css
@@ -12,8 +12,14 @@ html {
 
 body {
   padding-top: 40px;
-  padding-bottom: 40px;
+  padding-bottom: 50px;
   background-color: #eee;
+}
+
+.form-signin {
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
 }
 
 .form-signin {
@@ -40,7 +46,7 @@ body {
 .form-signin .form-control:focus {
   z-index: 2;
 }
-.form-signin input[type="email"] {
+.form-signin input[type="text"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
@@ -73,18 +79,18 @@ h6 {
 }
 
 .intro-header {
-    padding-top: 210px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
-    padding-bottom: 10px;
+    padding-top: 400px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
+    padding-bottom: 40px;
     text-align: center;
     color: #FFFFFF ;
-    background: url(../img/instantCam2.jpg) no-repeat center center;
+    background: url(../img/instantCam1.jpg) no-repeat center center;
     background-size: cover;
 }
 
 .intro-message {
     position: relative;
-    padding-top: 20%;
-    padding-bottom: 20%;
+    padding-top: 10%;
+    padding-bottom: 10%;
 }
 
 .intro-message > h1 {
@@ -203,7 +209,8 @@ h6 {
 }
 
 footer {
-    padding: 50px 0;
+    padding: 40px 0;
+	padding-bottom:100px;
     background-color: #f8f8f8;
 }
 
